<resources>
    <string name="app_name" translatable="false">Polytime</string>
    <string name="main_activity_title" translatable="false">Polytime</string>
    <string name="arrow_prev" translatable="false">&lt;&lt;</string> <!-- will look like : << -->
    <string name="arrow_next" translatable="false">&gt;&gt;</string> <!-- will look like : >> -->
    <string name="hour1" translatable="false">08h00\n10h00</string>
    <string name="hour2" translatable="false">10h15\n12h15</string>
    <string name="hour3" translatable="false">13h45\n15h45</string>
    <string name="hour4" translatable="false">16h00\n18h00</string>

    <string-array name="time_spinner">
        <item>Group TD1 TP1</item>
        <item>Group TD1 TP2</item>
        <item>Group TD2 TP3</item>
        <item>Group TD2 TP4</item>
    </string-array>

    <string name="arrow_current">Current</string>
    <string name="arrow_text">Week selection:</string>
    <string name="connexionFail">No connection!\nNo offline save!</string>
    <string name="readFail">Error while reading!\nNo offline save!</string>
    <string name="unknowFail">Unknow error!\nNo offline save!</string>
    <string name="day1">Mon.</string>
    <string name="day2">Tue.</string>
    <string name="day3">Wed.</string>
    <string name="day4">Thu.</string>
    <string name="day5">Fri.</string>
    <string name="day6">Sat.</string>
    <string name="day7">Sun.</string>
    <string name="downloading">Downloading…</string>
    <string name="fatalFailMessage">%1$s crashed because of an unknow error!<br/>
        If the error prevent the application from starting, try to erase preferences.<br/>
        Error StackTrace:<br/>
        <br/>
        <small><small>%2$s</small></small></string>
    <string name="fatalFailTitle">Fatal error</string>
    <string name="neutralErrorDialogAction">OK</string>
    <string name="positiveErrorDialogAction">ERASE PREFERENCES</string>
    <string name="time_text">Time table:</string>
    <string name="update">Update…</string>

    <string name="widgetHorizontal">Horizontal</string>
    <string name="widgetVertical">Vertical</string>
</resources>
