<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/rootLayout"
    tools:context=".android.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_text"
        android:id="@+id/timeText" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:id="@+id/timeSpinner"
        android:layout_below="@id/timeText"
        android:layout_alignParentStart="true" />

    <!-- Separator -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:id="@+id/sep1"
        android:layout_below="@id/timeSpinner"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sep1"
        android:text="@string/arrow_text"
        android:id="@+id/arrowText" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/arrow_prev"
        android:id="@+id/arrowPrevButton"
        android:layout_below="@id/arrowText"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/arrow_next"
        android:id="@+id/arrowNextButton"
        android:layout_below="@id/arrowText"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/arrow_current"
        android:id="@+id/arrowCurrentButton"
        android:layout_below="@id/arrowText"
        android:layout_toStartOf="@id/arrowNextButton"
        android:layout_toEndOf="@id/arrowPrevButton" />

    <!-- Separator -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:id="@+id/sep2"
        android:layout_below="@id/arrowNextButton"
        android:background="@android:color/darker_gray"/>

    <!-- the timetable goes here  programmatically  -->

</RelativeLayout>
